--- a/src/pages/Leagues.css
+++ b/src/pages/Leagues.css
@@ -471,8 +471,8 @@
 }
 
 .league-info-table thead th {
-  background-color: var(--sand-color-hover);
-  color: var(--masters-green-dark);
+  background-color: var(--masters-green-light);
+  color: white;
   text-transform: uppercase;
   font-size: 0.9rem;
   font-weight: bold;
